[metadata]
name = cnlp-transformers
version = file: src/cnlpt/VERSION
author = Machine Learning for Medical Language Lab @ CHIP
author_email = Timothy.Miller@childrens.harvard.edu
description = Transformers for Clinical NLP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Machine-Learning-for-Medical-Language/cnlp_transformers
project_urls =
    Bug Tracker = https://github.com/Machine-Learning-for-Medical-Language/cnlp_transformers/issues
classifiers =
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    seqeval
    tabulate
    transformers[torch]

[options.entry_points]
console_scripts =
    cnlpt_negation_rest = cnlpt.api.negation_rest:rest
    cnlpt_temporal_rest = cnlpt.api.temporal_rest:rest

[options.packages.find]
where = src
