[metadata]
name = radiotherapy-end2end
classifiers =
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    seqeval
    tabulate
    transitions
    transformers[torch]

[options.entry_points]
console_scripts =
    cnlpt_negation_rest = cnlpt.api.negation_rest:rest
    cnlpt_temporal_rest = cnlpt.api.temporal_rest:rest

[options.packages.find]
where = src
